@@ -5,16 +5,60 @@
 
 using namespace dolfin;
 
+void refine2D();
+void refine3D();
+
 int main()
 {
   dolfin_set("output", "plain text");
 
+  // Refine 2D grid
+  refine2D();
+
+  // Refine 3D grid
+  refine3D();
+
+  return 0;
+}
+
+void refine2D()
+{
+  cout << "Refining 2D grid" << endl;
+  cout << "----------------" << endl;  
+
   // Load grid
-  Grid grid("grid.xml.gz");
+  Grid grid("grid2D.xml.gz");
   
   // Save original grid in OpenDX format
-  File dx_unref("grid_unrefined.dx");
-  dx_unref << grid;
+  File unref("grid2D_unrefined.m");
+  unref << grid;
+
+  // Mark nodes for refinement
+  for (CellIterator cell(grid); !cell.end(); ++cell)
+    if ( cell->midpoint().dist(0.0, 0.0) < 0.3 )
+      cell->mark();
+  
+  // Refine grid
+  grid.refine();
+
+  // Save refined grid in Matlab format
+  File ref("grid2D_refined.m");
+  ref << grid;
+
+  cout << endl;
+}
+
+void refine3D()
+{
+  cout << "Refining 3D grid" << endl;
+  cout << "----------------" << endl;  
+
+  // Load grid
+  Grid grid("grid3D.xml.gz");
+  
+  // Save original grid in OpenDX format
+  File unref("grid3D_unrefined.dx");
+  unref << grid;
 
   // Mark nodes for refinement
   for (CellIterator cell(grid); !cell.end(); ++cell)
@@ -25,8 +69,6 @@ int main()
   grid.refine();
 
   // Save refined grid in OpenDX format
-  File dx_ref("grid_refined.dx");
-  dx_ref << grid;
-
-  return 0;
+  File ref("grid3D_refined.dx");
+  ref << grid;
 }
